ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: main-access
  namespace: algofab
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # backend:
  #   serviceName: portal
  #   servicePort: 80
  rules:
  - host: ws37-kube-dev-portal.tl.teralab-datascience.fr
    http:
      paths:
      - path: /
        backend:
          serviceName: portal
          servicePort: 80
  - host: ws37-kube-dev-ldap.tl.teralab-datascience.fr
    http:
      paths:
      - path: /
        backend:
          serviceName: ldap
          servicePort: 80
